Add reset password functionality using mailgun

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Registration",
     "main": "server.js",
     "dependencies": {
+        "async": "^2.6.1",
         "bcryptjs": "^2.4.3",
         "bluebird": "^3.5.2",
         "body-parser": "latest",
