--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.0.1",
     "description": "Registration",
     "main": "app.js",
+    "scripts":{
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
     "dependencies": {
         "async": "^2.6.1",
         "bcryptjs": "^2.4.3",
